--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,8 @@
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "nodemon": "^1.18.3",
-    "passport": "^0.4.0"
+    "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
+    "passport-google-oauth20": "^1.0.0"
   }
 }
